--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
     "next": "14.2.3",
+    "puppeteer": "^22.8.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
