--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/material": "^5.15.16",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.0",
-    "next": "14.2.3",
+    "@types/youtube": "^0.0.50",
+    "next": "^14.2.3",
     "puppeteer": "^22.8.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "swr": "^2.2.5",
     "zod": "^3.23.6"
   },
   "devDependencies": {
