--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "next": "^14.2.3",
-        "puppeteer": "^22.8.0",
+        "puppeteer-core": "10.1.0",
+        "chrome-aws-lambda": "10.1.0",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.4",
