--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
         "@supabase/ssr": "^0.3.0",
         "@supabase/supabase-js": "^2.43.0",
         "@types/youtube": "^0.0.50",
-        "chrome-aws-lambda": "10.1.0",
-        "lodash": "^4.17.21",
-        "lodash.debounce": "^4.0.8",
         "next": "^14.2.3",
+        "chrome-aws-lambda": "10.1.0",
         "puppeteer-core": "10.1.0",
         "react": "^18",
         "react-dom": "^18",
@@ -39,5 +37,8 @@
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
+    },
+    "engines": {
+        "node": "16.x"
     }
 }
