--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "@hookform/resolvers": "^3.3.4",
         "@mui/icons-material": "^5.15.16",
         "@mui/material": "^5.15.16",
-        "@sparticuz/chromium": "110.0.0",
+        "@sparticuz/chromium-min": "^110.0.1",
         "@supabase/ssr": "^0.3.0",
         "@supabase/supabase-js": "^2.43.0",
         "@types/youtube": "^0.0.50",
         "next": "^14.2.3",
-        "puppeteer-core": "^21.5.0",
+        "puppeteer-core": "19.6",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.4",
